# 4D-Geometry-Viewer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
docs/: report.tex  sources.bib  thesis.tex
src/: Camera.cpp  Camera.h  Camera4D.cpp  Camera4D.h  Engine.cpp  Engine.h  RotationType.h  Scene.h  Shader.cpp  Shader.h  Tesseract.cpp  Tesseract.h  Viewer.cpp  Viewer.h  main.cpp
src/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/polytopes/: Hypercube.cpp  Hypercube.h  Hyperoctahedron.cpp  Hyperoctahedron.h  Polytope.cpp  Polytope.h  Simplex.cpp  Simplex.h
src/shaders/: Fragment.h  Vertex.h
